# uni-identity

./: .gitignore  CLAUDE.md  Makefile  README.md  go.mod  go.sum  index.yaml
.github/workflows/: build-images.yaml  cleanup.yaml  integration.yaml  merge.yaml  nightly.yaml  pact-verification.yaml  pull-request.yaml  release.yaml
charts/: README.md
charts/identity/: Chart.yaml  values.yaml
clients/passport-exchange/: README.md
clients/passport-exchange/python/: README.md  pyproject.toml
clients/passport-exchange/python/src/passport_exchange_client/: __init__.py  client.py
clients/passport-exchange/python/tests/: test_client.py
clients/passport-exchange/rust/: Cargo.toml  README.md
clients/passport-exchange/rust/src/: lib.rs
cmd/unikorn-auth0-organization-controller/: main.go
cmd/unikorn-auth0-organization-member-controller/: main.go
cmd/unikorn-auth0-user-controller/: main.go
cmd/unikorn-group-subjects-migration/: main.go
cmd/unikorn-group-subjects-migration-manager/: main.go  main_test.go
cmd/unikorn-identity/: main.go
cmd/unikorn-oauth2client-controller/: main.go
cmd/unikorn-organization-controller/: main.go
cmd/unikorn-organization-user-controller/: main.go
cmd/unikorn-project-controller/: main.go
cmd/unikorn-user-controller/: main.go
docs/: integration-testing.md  multi-issuer-token-contract.md  passport-exchange-providers.md  role-system-account-chart-split.md
hack/: auth0.md
hack/auth0/: main.go
pkg/: README.md
terraform/: .terraform.lock.hcl  README.md  main.tf  outputs.tf  variables.tf
test/: .env.example  README.md
(+401 files in other folders)
